# hermes-algo-trader

./: .env_example  .gitignore  pyproject.toml
config/: paper-btc.yaml  pipeline.example.yaml
scripts/: rbi-paper-btc-run.sh  rbi-paper-btc-start.sh  rbi-paper-btc-status.sh  rbi-paper-btc-stop.sh  rbi-paper-btc-watchdog.sh
src/rbi_trader/: __init__.py  backtest.py  broker.py  cli.py  config.py  data.py  notifier.py  pipeline.py  strategy.py
src/rbi_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_backtest.py  test_notifier.py  test_pipeline.py  test_strategy.py
